[tool.poetry]
name = "tts-middleware"
version = "0.7.2"
description = ""
authors = ["Abhinav Tushar <abhinav@lepisma.xyz>", "Ayush Shridhar <ayush.shridhar1506@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sox = "^1.4.1"
pyquery = "^1.4.3"
google-transliteration-api = "1.0.3"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
streamlit = "^0.84.0"
pyttsx3 = "^2.90"
librosa = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
